--- a/myproject.html
+++ b/myproject.html
@@ -41,7 +41,7 @@
 
       <article class="job">
         <h3 class="job__title">freeCodeCamp | 2021</h3>
-  
+        
         <p class="job__description">
           <strong>Projects: </strong>
           is a non-profit organization that consists of an interactive learning web platform, an online community forum, chat rooms, 
@@ -50,15 +50,8 @@
   
         <p class="job__description">
           <strong>Tech stack:</strong>
-          HTML5, CSS3, CSS Grid, JavaScript, ES6, Bootstrap, jQuery, Sass, React/Redux.
+          HTML5, CSS3, CSS Grid, JavaScript, ES6, Bootstrap, Sass.
       
-        </p>
-  
-        <p class="job__description">
-          <strong>My responsibilities:</strong>
-          Mostly I work on the development of logic and page layout on the client side. 
-          My responsibilities include: User interface development, working with database, creating forms, routes for the server, implementing analytics and displaying statistics. 
-          Also a little work with application back-end and databases.
         </p>
 
         </article>
@@ -118,9 +111,7 @@
         </div>
       </div>
     </section>
-
-
-
+  
 </main>
 </div>
 </body>
